--- a/index.html
+++ b/index.html
@@ -3,25 +3,19 @@
   <head>
     <script src="jquery.js"></script>
     <script src="data_generator.js"></script>
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <script src="js/bootstrap.js"></script>
+    <title>Twittler</title>
   </head>
   <body>
-    <script>
-
-      $(document).ready(function(){
-        var $body = $('body');
-        $body.html('');
-
-        var index = streams.home.length - 1;
-        while(index >= 0){
-          var tweet = streams.home[index];
-          var $tweet = $('<div></div>');
-          $tweet.text('@' + tweet.user + ': ' + tweet.message);
-          $tweet.appendTo($body);
-          index -= 1;
-        }
-
-      });
-
-    </script>
+    <div class='container-fluid'>
+      <h1>Twittler</h1>
+      <div class='row'>
+        <ul class='tweetlist'>
+          <li>test</li>
+        </ul>
+      </div>
+    </div>
+    <script src="js/application.js"></script>
   </body>
 </html>
