--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class='container-fluid'>
       <h1>Twittler</h1>
       <div class='row'>
-        <ul class='tweetlist'>
+        <ul class='tweetList'>
           <li>test</li>
         </ul>
       </div>
