Added col bootstrap class and centred content

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <script src="jquery.js"></script>
     <script src="data_generator.js"></script>
+    <link href="css/main.css" rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet">
     <script src="js/bootstrap.js"></script>
     <title>Twittler</title>
@@ -11,9 +12,10 @@
     <div class='container-fluid'>
       <h1>Twittler</h1>
       <div class='row'>
-        <ul class='tweetList'>
-          <li>test</li>
-        </ul>
+        <div class='col-md-3'></div>
+        <div class='tweetList col-md-6'></div>
+        <div></div>
+        <div class='col-md-3'></div>
       </div>
     </div>
     <script src="js/application.js"></script>
