Edited styling for tweets

--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <link href="css/main.css" rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet">
     <script src="js/bootstrap.js"></script>
-    <title>Twittler</title>
+    <title>twittler</title>
   </head>
   <body>
     <div class='container-fluid'>
-      <h1>Twittler</h1>
+      <h1>twittler</h1>
       <div class='row'>
         <div class='col-md-3'></div>
-        <div class='tweetList col-md-6'></div>
-        <div></div>
+        <div class='tweet-list col-md-6'>
+          <div class='tweet-container'><span class='user'><strong>mracus</strong></span><span class='message-time'> Sept 15 11:24am</span><div class='message'>just saw the potato #magic</div></div>
+        </div>
         <div class='col-md-3'></div>
       </div>
     </div>
