Implemented checkNewTweets function, but still need to troubleshoot why it won't run at a set interval

--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
       <h1>twittler</h1>
       <div class='row'>
         <div class='col-md-3'></div>
-        <div class='tweet-list col-md-6'>
-          <div class='tweet-container'><span class='user'><strong>mracus</strong></span><span class='message-time'> Sept 15 11:24am</span><div class='message'>just saw the potato #magic</div></div>
+        <div class='col-md-6'>
+          <div class='show-more'>
+            <button class='show-more'>Show more tweets (<span id='num-new-tweets'></span>)</button>
+          </div>
+          <div class='tweet-list'>
+            <div class='tweet-container'><span class='user'><strong>mracus</strong></span><span class='message-time'> Sept 15 11:24am</span><div class='message'>just saw the potato #magic</div></div>
+          </div>
         </div>
         <div class='col-md-3'></div>
       </div>
