Changed text for show more functionality

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class='col-md-3'></div>
         <div class='col-md-6'>
           <div class='show-more'>
-            <a class='show-more' href='#'>Show more tweets (<span id='num-new-tweets'></span>)</a>
+            <a class='show-more' href='#'><span id='num-new-tweets'></span> new tweets</a>
           </div>
           <div class='tweet-list'>
           </div>
@@ -37,7 +37,7 @@
               <div class='col-md-3'></div>
               <div class='col-md-6'>
                 <div class='show-more'>
-                  <a class='show-more' href='#'>Show more tweets (<span id='num-new-tweets'></span>)</a>
+                  <a class='show-more' href='#'><span id='num-new-tweets'></span> new tweets</a>
                 </div>
                 <div class='tweet-list'>
                 </div>
